apps/lidarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr-httproute
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  hostnames:
  - "lidarr.${DOMAIN}"
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lidarr
      port: 8686
